--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     <section class="wsus__banner" style="background: url(images/banner_bg.jpg);">
         <div class="container">
             <div class="row">
-                <div class="col-xl-6">
+                <div class="col-xxl-6 col-lg-6">
                     <div class="wsus__banner_text">
                         <h6>Business Solution</h6>
                         <h1>Creative Solution for Your Business</h1>
@@ -229,7 +229,7 @@
                         <a class="common_btn" href="#">Book Consultation <i class="fas fa-chevron-right"></i></a>
                     </div>
                 </div>
-                <div class="col-xl-6">
+                <div class="col-xxl-6 col-lg-6">
                     <div class="wsus__banner_img">
                         <div class="img">
                             <img src="images/banner_img.png" alt="Banner" class="img-fluid w-100">
@@ -266,7 +266,7 @@
     <section class="wsus__about pt_120 xs_pt_100">
         <div class="container">
             <div class="row">
-                <div class="col-xl-7">
+                <div class="col-xl-7 col-md-11 col-lg-6">
                     <div class="about_img_area">
                         <p>EXPLORE THE BUSINESS FOR YOURSELF</p>
                         <div class="about_img">
@@ -284,7 +284,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-5">
+                <div class="col-xl-5 col-lg-6">
                     <div class="about_text">
                         <div class="section_heading heading_left mb_40">
                             <h5>About Us</h5>
@@ -326,19 +326,19 @@
     <section class="counter_section mt_90 xs_mt_50">
         <div class="container">
             <div class="row">
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-md-4">
                     <div class="single_counter">
                         <h2><span class="count">25</span>+</h2>
                         <p>Years of Experience</p>
                     </div>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-md-4">
                     <div class="single_counter">
                         <h2><span class="count">100</span>%</h2>
                         <p>Satisfaction Rate</p>
                     </div>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-md-4">
                     <div class="single_counter">
                         <h2><span class="count">22</span>K</h2>
                         <p>Project Completed</p>
@@ -358,7 +358,7 @@
     <section class="wsus__features mt_110 xs_mt_90">
         <div class="container">
             <div class="row">
-                <div class="col-xl-5 m-auto">
+                <div class="col-xl-5 col-lg-8 m-auto">
                     <div class="section_heading mb_25">
                         <h5>Features</h5>
                         <h2>Provide Best Solution For Your Business</h2>
@@ -440,13 +440,13 @@
     <section class="portfolio pt_115 xs_pt_95 mt_115 xs_mt_95 pb_115 xs_pb_95">
         <div class="container">
             <div class="row justify-content-between align-items-end">
-                <div class="col-xl-5">
+                <div class="col-xl-5 col-md-8">
                     <div class="section_heading heading_left mb_25">
                         <h5>Portfolio</h5>
                         <h2>Provide Best Solution For Your Business</h2>
                     </div>
                 </div>
-                <div class="col-xl-5">
+                <div class="col-xl-5 col-md-4">
                     <div class="portfolio_btn_area">
                         <a class="common_btn" href="#">View all Portfolio <i class="fas fa-chevron-right"></i></a>
                     </div>
@@ -708,7 +708,7 @@
     =============================-->
     <section class="call_to_action mt_115 xs_mt_95">
         <div class="row">
-            <div class="col-xl-8">
+            <div class="col-xl-8 col-lg-7">
                 <div class="call_to_action_img">
                     <img src="images/call_to_action_bg.jpg" alt="Call to action" class="img-fluid">
                     <a class="venobox plaay_btn" data-autoplay="true" data-vbtype="video"
@@ -717,7 +717,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-xl-4">
+            <div class="col-xl-4 col-lg-5">
                 <div class="call_to_action_text">
                     <h4>Create effective business content, focus on delivering value to your audience.</h4>
                     <ul>
@@ -807,7 +807,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-xl-6">
+                <div class="col-xl-6 col-lg-6">
                     <div class="wsus__events_text">
                         <ul>
                             <li>
@@ -849,7 +849,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-xl-6">
+                <div class="col-xl-6 col-lg-6">
                     <div class="wsus__events_img">
                         <img src="images/event_list_img.png" alt="Events" class="img-fluid">
                         <div class="text">
@@ -976,7 +976,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-xl-2 col-sm-4 col-lg-3 wow fadeInUp">
+                <div class="col-xl-2 col-sm-6 col-md-4 col-lg-3 wow fadeInUp">
                     <div class="wsus__footer_link">
                         <h2>Navigation</h2>
                         <ul>
@@ -988,7 +988,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-xl-2 col-sm-4 col-lg-3 wow fadeInUp">
+                <div class="col-xl-2 col-sm-6 col-md-4 col-lg-3 wow fadeInUp">
                     <div class="wsus__footer_link">
                         <h2>Business</h2>
                         <ul>
@@ -1000,7 +1000,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-xl-2 col-sm-4 col-lg-3 wow fadeInUp">
+                <div class="col-xl-2 col-sm-6 col-md-4 col-lg-3 wow fadeInUp">
                     <div class="wsus__footer_link">
                         <h2>Solutions</h2>
                         <ul>
@@ -1012,7 +1012,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-xl-3 col-lg-8 wow fadeInUp">
+                <div class="col-xl-3 col-sm-6 col-md-8 wow fadeInUp">
                     <div class="wsus__footer_instagram">
                         <h2>Instagram</h2>
                         <ul class="d-flex flex-wrap">
