--- a/index_2.html
+++ b/index_2.html
@@ -29,15 +29,15 @@
     <header>
         <div class="container">
             <div class="row">
-                <div class="col-sm-5 col-xl-5">
-                    <div class="wsus__header_left">
+                <div class="col-md-6 col-xl-5">
+                    <div class="wsus__header_left d-none d-md-block">
                         <a href="mailto:example@gmail.com">
                             <span><img src="images/mail_icon_white.svg" alt="mail" class="img-fluid"></span>
                             example@gmail.com
                         </a>
                     </div>
                 </div>
-                <div class="col-sm-7 col-xl-7">
+                <div class="col-md-6 col-xl-7">
                     <ul class="wsus__header_right d-flex flex-wrap">
                         <li>
                             <select class="select_js">
@@ -220,7 +220,7 @@
     <section class="wsus__banner_2 wsus__banner" style="background: url(images/banner_bg_2.jpg);">
         <div class="container">
             <div class="row">
-                <div class="col-xl-6">
+                <div class="col-xl-6 col-md-10 col-lg-8">
                     <div class="wsus__banner_text">
                         <h6>We’re a full-range Design Agency</h6>
                         <h1>Branding & Digital Agency</h1>
@@ -250,7 +250,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-xl-4">
+                <div class="col-lg-4 col-md-6">
                     <div class="wsus__single_service">
                         <a class="wsus__single_service_img" href="#">
                             <img src="images/service_img_1.png" alt="service" class="img-fluid">
@@ -265,7 +265,7 @@
                         <a class="read_btn" href="#">More Details <i class="fas fa-chevron-right"></i></a>
                     </div>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-lg-4 col-md-6">
                     <div class="wsus__single_service">
                         <a class="wsus__single_service_img" href="#">
                             <img src="images/service_img_2.png" alt="service" class="img-fluid">
@@ -280,7 +280,7 @@
                         <a class="read_btn" href="#">More Details <i class="fas fa-chevron-right"></i></a>
                     </div>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-lg-4 col-md-6">
                     <div class="wsus__single_service">
                         <a class="wsus__single_service_img" href="#">
                             <img src="images/service_img_3.png" alt="service" class="img-fluid">
@@ -309,12 +309,12 @@
     <section class="wsus__about_2 mt_120 xs_mt_100">
         <div class="container">
             <div class="row justify-content-between align-items-center">
-                <div class="col-xl-5">
+                <div class="col-xl-5 col-lg-6">
                     <div class="wsus__about_2_img">
                         <img src="images/about_2_img_1.png" alt="About" class="img-fluid">
                     </div>
                 </div>
-                <div class="col-xl-6">
+                <div class="col-xl-6 col-lg-6">
                     <div class="wsus__about_2_text">
                         <div class="top">
                             <span>90%</span>
@@ -410,28 +410,28 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-xl-3">
+                <div class="col-lg-3 col-md-6">
                     <div class="wsus__how_it_work_item">
                         <span>01</span>
                         <h4 class="title">Creative ideas</h4>
                         <p>Morbi libero velit, placerat a suscipit sit amet ornare sit amet enim.</p>
                     </div>
                 </div>
-                <div class="col-xl-3">
+                <div class="col-lg-3 col-md-6">
                     <div class="wsus__how_it_work_item">
                         <span>02</span>
                         <h4 class="title">Support Clients</h4>
                         <p>Morbi libero velit, placerat a suscipit sit amet ornare sit amet enim.</p>
                     </div>
                 </div>
-                <div class="col-xl-3">
+                <div class="col-lg-3 col-md-6">
                     <div class="wsus__how_it_work_item">
                         <span>03</span>
                         <h4 class="title">Best Development</h4>
                         <p>Morbi libero velit, placerat a suscipit sit amet ornare sit amet enim.</p>
                     </div>
                 </div>
-                <div class="col-xl-3">
+                <div class="col-lg-3 col-md-6">
                     <div class="wsus__how_it_work_item">
                         <span>04</span>
                         <h4 class="title">Solve Problems</h4>
@@ -452,19 +452,19 @@
     <section class="wsus__team_2 mt_110 xs_mt_90">
         <div class="container">
             <div class="row justify-content-between align-items-end">
-                <div class="col-xl-3">
+                <div class="col-lg-6 col-md-7">
                     <div class="section_heading heading_left mb_25">
                         <h2>Meet Our Creative Staff</h2>
                     </div>
                 </div>
-                <div class="col-xl-5">
+                <div class="col-lg-6 col-md-5">
                     <div class="portfolio_btn_area">
                         <a class="common_btn_2" href="#">View all Team <i class="fas fa-chevron-right"></i></a>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-xl-4">
+                <div class="col-lg-4 col-sm-6">
                     <div class="wsus__single_team_2">
                         <img src="images/team_2_img_1.png" alt="Team" class="img-fluid">
                         <div class="text">
@@ -479,7 +479,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-lg-4 col-sm-6">
                     <div class="wsus__single_team_2">
                         <img src="images/team_2_img_2.png" alt="Team" class="img-fluid">
                         <div class="text">
@@ -494,7 +494,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-lg-4 col-sm-6">
                     <div class="wsus__single_team_2">
                         <img src="images/team_2_img_3.png" alt="Team" class="img-fluid">
                         <div class="text">
@@ -509,7 +509,6 @@
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
     </section>
@@ -525,7 +524,7 @@
         <div class="container">
             <div class="call_to_action_2_bg" style="background: url(images/cta_2_bg.png);">
                 <div class="row">
-                    <div class="col-xl-5">
+                    <div class="col-xxl-5 col-md-10 col-lg-9 col-xl-6">
                         <div class="call_to_action_2_text">
                             <div class="section_heading heading_left">
                                 <h2>We help to achieve mutual goals.</h2>
@@ -761,7 +760,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-md-6">
                     <div class="wsus__single_pricing">
                         <h4>Standard</h4>
                         <p>Nullam ncidunt torto ac maximus odio ipsum sed id mauris.</p>
@@ -775,7 +774,7 @@
                         <a class="common_btn" href="#">Purchase Plan</a>
                     </div>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-md-6">
                     <div class="wsus__single_pricing active">
                         <h4>Standard</h4>
                         <p>Nullam ncidunt torto ac maximus odio ipsum sed id mauris.</p>
@@ -789,7 +788,7 @@
                         <a class="common_btn" href="#">Purchase Plan</a>
                     </div>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-md-6">
                     <div class="wsus__single_pricing">
                         <h4>Business</h4>
                         <p>Nullam ncidunt torto ac maximus odio ipsum sed id mauris.</p>
@@ -810,6 +809,7 @@
         PRICING END
     =============================-->
 
+
     <!--============================
         BLOG 2 START
     =============================-->
@@ -823,7 +823,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-md-6">
                     <div class="wsus__single_blog">
                         <div class="wsus__single_blog_img">
                             <img src="images/blog_img_1.png" alt="Blog" class="img-fluid">
@@ -839,7 +839,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-md-6">
                     <div class="wsus__single_blog">
                         <div class="wsus__single_blog_img">
                             <img src="images/blog_img_2.png" alt="Blog" class="img-fluid">
@@ -855,7 +855,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-md-6">
                     <div class="wsus__single_blog">
                         <div class="wsus__single_blog_img">
                             <img src="images/blog_img_3.png" alt="Blog" class="img-fluid">
@@ -886,10 +886,10 @@
         <div class="container">
             <div class="wsus__footer_subscription" style="background: url(images/footer_subscribe_bg.png);">
                 <div class="row align-items-center">
-                    <div class="col-xl-6">
+                    <div class="col-xl-6 col-lg-5">
                         <h3>Subscribe Us</h3>
                     </div>
-                    <div class="col-xl-6">
+                    <div class="col-xl-6 col-lg-7">
                         <form action="#">
                             <input type="text" placeholder="Enter your email">
                             <button class="common_btn" type="submit">Subscribe</button>
