all home responsive done

--- a/about_us.html
+++ b/about_us.html
@@ -29,15 +29,15 @@
     <header>
         <div class="container">
             <div class="row">
-                <div class="col-sm-5 col-xl-5">
-                    <div class="wsus__header_left">
+                <div class="col-md-6 col-xl-5">
+                    <div class="wsus__header_left d-none d-md-block">
                         <a href="mailto:example@gmail.com">
                             <span><img src="images/mail_icon_white.svg" alt="mail" class="img-fluid"></span>
                             example@gmail.com
                         </a>
                     </div>
                 </div>
-                <div class="col-sm-7 col-xl-7">
+                <div class="col-md-6 col-xl-7">
                     <ul class="wsus__header_right d-flex flex-wrap">
                         <li>
                             <select class="select_js">
@@ -243,7 +243,7 @@
     <section class="wsus__about pt_120 xs_pt_100">
         <div class="container">
             <div class="row">
-                <div class="col-xl-7">
+                <div class="col-xl-7 col-md-11 col-lg-6">
                     <div class="about_img_area">
                         <p>EXPLORE THE BUSINESS FOR YOURSELF</p>
                         <div class="about_img">
@@ -261,7 +261,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-5">
+                <div class="col-xl-5 col-lg-6">
                     <div class="about_text">
                         <div class="section_heading heading_left mb_40">
                             <h5>About Us</h5>
@@ -385,19 +385,19 @@
     <section class="counter_section mt_85 xs_mt_65">
         <div class="container">
             <div class="row">
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-md-4">
                     <div class="single_counter">
                         <h2><span class="count">25</span>+</h2>
                         <p>Years of Experience</p>
                     </div>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-md-4">
                     <div class="single_counter">
                         <h2><span class="count">100</span>%</h2>
                         <p>Satisfaction Rate</p>
                     </div>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-md-4">
                     <div class="single_counter">
                         <h2><span class="count">22</span>K</h2>
                         <p>Project Completed</p>
@@ -416,7 +416,7 @@
     =============================-->
     <section class="call_to_action mt_115 xs_mt_95">
         <div class="row">
-            <div class="col-xl-8">
+            <div class="col-xl-8 col-lg-7">
                 <div class="call_to_action_img">
                     <img src="images/call_to_action_bg.jpg" alt="Call to action" class="img-fluid">
                     <a class="venobox plaay_btn" data-autoplay="true" data-vbtype="video"
@@ -425,7 +425,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-xl-4">
+            <div class="col-xl-4 col-lg-5">
                 <div class="call_to_action_text">
                     <h4>Create effective business content, focus on delivering value to your audience.</h4>
                     <ul>
@@ -632,7 +632,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-xl-2 col-sm-4 col-lg-3 wow fadeInUp">
+                <div class="col-xl-2 col-sm-6 col-md-4 col-lg-3 wow fadeInUp">
                     <div class="wsus__footer_link">
                         <h2>Navigation</h2>
                         <ul>
@@ -644,7 +644,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-xl-2 col-sm-4 col-lg-3 wow fadeInUp">
+                <div class="col-xl-2 col-sm-6 col-md-4 col-lg-3 wow fadeInUp">
                     <div class="wsus__footer_link">
                         <h2>Business</h2>
                         <ul>
@@ -656,7 +656,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-xl-2 col-sm-4 col-lg-3 wow fadeInUp">
+                <div class="col-xl-2 col-sm-6 col-md-4 col-lg-3 wow fadeInUp">
                     <div class="wsus__footer_link">
                         <h2>Solutions</h2>
                         <ul>
@@ -668,7 +668,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-xl-3 col-lg-8 wow fadeInUp">
+                <div class="col-xl-3 col-sm-6 col-md-8 wow fadeInUp">
                     <div class="wsus__footer_instagram">
                         <h2>Instagram</h2>
                         <ul class="d-flex flex-wrap">
