--- a/index_3.html
+++ b/index_3.html
@@ -29,15 +29,15 @@
     <header>
         <div class="container">
             <div class="row">
-                <div class="col-sm-5 col-xl-5">
-                    <div class="wsus__header_left">
+                <div class="col-md-6 col-xl-5">
+                    <div class="wsus__header_left d-none d-md-block">
                         <a href="mailto:example@gmail.com">
                             <span><img src="images/mail_icon_white.svg" alt="mail" class="img-fluid"></span>
                             example@gmail.com
                         </a>
                     </div>
                 </div>
-                <div class="col-sm-7 col-xl-7">
+                <div class="col-md-6 col-xl-7">
                     <ul class="wsus__header_right d-flex flex-wrap">
                         <li>
                             <select class="select_js">
@@ -220,7 +220,7 @@
     <section class="wsus__banner_3 wsus__banner" style="background: url(images/banner_3_bg.jpg);">
         <div class="container">
             <div class="row">
-                <div class="col-xl-6">
+                <div class="col-lg-6">
                     <div class="wsus__banner_text">
                         <h6>Experienced Criminal Lawyer</h6>
                         <h1>Special Approach, Dedicated Attorneys</h1>
@@ -229,7 +229,7 @@
                         <a class="common_btn_2" href="#">Explore Work <i class="fas fa-chevron-right"></i></a>
                     </div>
                 </div>
-                <div class="col-xl-6">
+                <div class="col-lg-6 col-sm-10 col-md-8">
                     <div class="wsus__banner_img">
                         <div class="img">
                             <img src="images/banner_3_img.png" alt="Banner" class="img-fluid w-100">
@@ -250,7 +250,7 @@
     <section class="wsus__about_us_2 mt_120 xs_mt_100">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-xl-5">
+                <div class="col-xl-5 col-md-9 col-lg-6">
                     <div class="wsus__about_us_2_img">
                         <img src="images/about_3_img.png" alt="About" class="img-fluid">
                         <div class="text">
@@ -259,7 +259,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-7">
+                <div class="col-xl-7 col-lg-6">
                     <div class="wsus__about_us_2_text">
                         <div class="section_heading heading_left">
                             <h2>We are Here to Manage Your <span>Law with Experience</span></h2>
@@ -290,7 +290,7 @@
     =============================-->
     <section class="wsus__services_2 mt_110 xs_mt_90">
         <div class="row">
-            <div class="col-xl-5">
+            <div class="col-xl-6 col-lg-8">
                 <div class="section_heading heading_left mb_25">
                     <h2>We are here to Fight Against <span>any Violence's.</span></h2>
                 </div>
@@ -299,7 +299,7 @@
         <div class="row">
             <div class="col-xl-7">
                 <div class="row">
-                    <div class="col-xl-4">
+                    <div class="col-lg-4 col-md-6">
                         <div class="wsus__single_services_2">
                             <div class="icon">
                                 <img src="images/service_2_icon_2.png" alt="Service" class="img-fluid">
@@ -309,7 +309,7 @@
                             <a class="read_btn" href="#">More Details <i class="fas fa-chevron-right"></i></a>
                         </div>
                     </div>
-                    <div class="col-xl-4">
+                    <div class="col-lg-4 col-md-6">
                         <div class="wsus__single_services_2">
                             <div class="icon">
                                 <img src="images/service_2_icon_3.png" alt="Service" class="img-fluid">
@@ -319,7 +319,7 @@
                             <a class="read_btn" href="#">More Details <i class="fas fa-chevron-right"></i></a>
                         </div>
                     </div>
-                    <div class="col-xl-4">
+                    <div class="col-lg-4 col-md-6">
                         <div class="wsus__single_services_2">
                             <div class="icon">
                                 <img src="images/service_2_icon_4.png" alt="Service" class="img-fluid">
@@ -329,7 +329,7 @@
                             <a class="read_btn" href="#">More Details <i class="fas fa-chevron-right"></i></a>
                         </div>
                     </div>
-                    <div class="col-xl-4">
+                    <div class="col-lg-4 col-md-6">
                         <div class="wsus__single_services_2">
                             <div class="icon">
                                 <img src="images/service_2_icon_5.png" alt="Service" class="img-fluid">
@@ -339,7 +339,7 @@
                             <a class="read_btn" href="#">More Details <i class="fas fa-chevron-right"></i></a>
                         </div>
                     </div>
-                    <div class="col-xl-4">
+                    <div class="col-lg-4 col-md-6">
                         <div class="wsus__single_services_2">
                             <div class="icon">
                                 <img src="images/service_2_icon_6.png" alt="Service" class="img-fluid">
@@ -349,7 +349,7 @@
                             <a class="read_btn" href="#">More Details <i class="fas fa-chevron-right"></i></a>
                         </div>
                     </div>
-                    <div class="col-xl-4">
+                    <div class="col-lg-4 col-md-6">
                         <div class="wsus__single_services_2">
                             <div class="icon">
                                 <img src="images/service_2_icon_1.png" alt="Service" class="img-fluid">
@@ -361,7 +361,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xl-5">
+            <div class="col-xl-5 col-md-6">
                 <div class="wsus__services_2_banner">
                     <img src="images/services_2_large_banner.png" alt="Services" class="img-fluid w-100">
                 </div>
@@ -400,7 +400,7 @@
     <section class="wsus__case_studies mt_110 xs_mt_90">
         <div class="container">
             <div class="row">
-                <div class="col-xl-5">
+                <div class="col-xl-5 col-lg-8">
                     <div class="section_heading heading_left mb_25">
                         <h2>Our Case Solved with <span>our Experience.</span></h2>
                     </div>
@@ -464,25 +464,25 @@
     <section class="counter_section_2 mt_95 xs_mt_75">
         <div class="container">
             <div class="row">
-                <div class="col-xl-3">
+                <div class="col-xl-3 col-md-6">
                     <div class="single_counter_2">
                         <h2><span class="count">86</span>%</h2>
                         <p>Case Solved</p>
                     </div>
                 </div>
-                <div class="col-xl-3">
+                <div class="col-xl-3 col-md-6">
                     <div class="single_counter_2">
                         <h2><span class="count">450</span>+</h2>
                         <p>Happy Clients</p>
                     </div>
                 </div>
-                <div class="col-xl-3">
+                <div class="col-xl-3 col-md-6">
                     <div class="single_counter_2">
                         <h2><span class="count">49</span>+</h2>
                         <p>Award Winning</p>
                     </div>
                 </div>
-                <div class="col-xl-3">
+                <div class="col-xl-3 col-md-6">
                     <div class="single_counter_2">
                         <h2><span class="count">99</span>%</h2>
                         <p>Success Chance</p>
@@ -506,7 +506,7 @@
                     <div class="col-12">
                         <div class="wsus__single_testimonial_3">
                             <div class="row align-items-center justify-content-between">
-                                <div class="col-xl-8">
+                                <div class="col-lg-8">
                                     <div class="wsus__single_testimonial_3_text">
                                         <p>“ A Lawyer's Commitment to Equality and Fairness your audience, maintaining a
                                             consistent tone and style, and aligning your content with your overall
@@ -515,7 +515,7 @@
                                         <span>@ Henry Voyant</span>
                                     </div>
                                 </div>
-                                <div class="col-xl-4">
+                                <div class="col-lg-4">
                                     <div class="wsus__single_testimonial_3_img">
                                         <div class="img">
                                             <img src="images/testimonial_3_img_1.png" alt="Testimonial"
@@ -529,7 +529,7 @@
                     <div class="col-12">
                         <div class="wsus__single_testimonial_3">
                             <div class="row align-items-center justify-content-between">
-                                <div class="col-xl-8">
+                                <div class="col-lg-8">
                                     <div class="wsus__single_testimonial_3_text">
                                         <p>“ A Lawyer's Commitment to Equality and Fairness your audience, maintaining a
                                             consistent tone and style, and aligning your content with your overall
@@ -538,7 +538,7 @@
                                         <span>@ Henry Voyant</span>
                                     </div>
                                 </div>
-                                <div class="col-xl-4">
+                                <div class="col-lg-4">
                                     <div class="wsus__single_testimonial_3_img">
                                         <div class="img">
                                             <img src="images/testimonial_3_img_2.png" alt="Testimonial"
@@ -571,28 +571,28 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-xl-3">
+                <div class="col-lg-3 col-md-6">
                     <div class="wsus__how_it_work_item">
                         <span>01</span>
                         <h4 class="title">Request a Quote</h4>
                         <p>Morbi libero velit, placerat a suscipit sit amet ornare sit amet enim.</p>
                     </div>
                 </div>
-                <div class="col-xl-3">
+                <div class="col-lg-3 col-md-6">
                     <div class="wsus__how_it_work_item">
                         <span>02</span>
                         <h4 class="title">Investigation</h4>
                         <p>Morbi libero velit, placerat a suscipit sit amet ornare sit amet enim.</p>
                     </div>
                 </div>
-                <div class="col-xl-3">
+                <div class="col-lg-3 col-md-6">
                     <div class="wsus__how_it_work_item">
                         <span>03</span>
                         <h4 class="title">Case Study</h4>
                         <p>Morbi libero velit, placerat a suscipit sit amet ornare sit amet enim.</p>
                     </div>
                 </div>
-                <div class="col-xl-3">
+                <div class="col-lg-3 col-md-6">
                     <div class="wsus__how_it_work_item">
                         <span>04</span>
                         <h4 class="title">Case Fight</h4>
@@ -612,8 +612,8 @@
     =============================-->
     <section class="wsus__faq mt_115 xs_mt_95">
         <div class="row align-items-center">
-            <div class="col-xl-6">
-                <div class="wsus__faq_text">
+            <div class="col-lg-6">
+                <div class="wsus__faq_text mt-0">
                     <div class="section_heading heading_left mb_35">
                         <h2>Frequently Asked Questions</h2>
                     </div>
@@ -700,7 +700,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xl-6">
+            <div class="col-lg-6">
                 <div class="wsus__faq_img">
                     <img src="images/faq_img.png" alt="FAQ" class="img-fluid">
                 </div>
@@ -725,7 +725,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-xl-3">
+                <div class="col-xl-3 col-md-6 col-lg-4">
                     <div class="wsus__single_team">
                         <div class="wsus__single_img">
                             <img src="images/team_3_img_1.png" alt="Team" class="img-fluid">
@@ -743,7 +743,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-3">
+                <div class="col-xl-3 col-md-6 col-lg-4">
                     <div class="wsus__single_team">
                         <div class="wsus__single_img">
                             <img src="images/team_3_img_2.png" alt="Team" class="img-fluid">
@@ -761,7 +761,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-3">
+                <div class="col-xl-3 col-md-6 col-lg-4">
                     <div class="wsus__single_team">
                         <div class="wsus__single_img">
                             <img src="images/team_3_img_3.png" alt="Team" class="img-fluid">
@@ -779,7 +779,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-3">
+                <div class="col-xl-3 col-md-6 col-lg-4">
                     <div class="wsus__single_team">
                         <div class="wsus__single_img">
                             <img src="images/team_3_img_4.png" alt="Team" class="img-fluid">
@@ -811,12 +811,12 @@
     <section class="wsus__consulation mt_120 xs_mt_100">
         <div class="container">
             <div class="row align-items-center justify-content-between">
-                <div class="col-xl-6">
+                <div class="col-xl-6 col-lg-6">
                     <div class="wsus__consulation_img">
                         <img src="images/counsulation_img.png" alt="Counsulation" class="img-fluid">
                     </div>
                 </div>
-                <div class="col-xl-5">
+                <div class="col-xl-5 col-lg-6">
                     <div class="wsus__consulation_text">
                         <div class="section_heading heading_left">
                             <h2>Free Consultation</h2>
@@ -935,7 +935,7 @@
             </div>
 
             <div class="row justify-content-between mt_100">
-                <div class="col-xl-3 wow fadeInUp">
+                <div class="col-xxl-3 col-sm-6 col-lg-4 col-xl-3 wow fadeInUp">
                     <div class="wsus__logo_area">
                         <a class="logo" href="index.html">
                             <img src="images/footer_logo.png" alt="Freeit" class="img-fluid">
@@ -948,7 +948,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-xl-2 wow fadeInUp">
+                <div class="col-xxl-2 col-sm-6 col-lg-4 col-xl-2 wow fadeInUp">
                     <div class="wsus__footer_link">
                         <h2>Navigation</h2>
                         <ul>
@@ -960,7 +960,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-xl-2 wow fadeInUp">
+                <div class="col-xxl-2 col-sm-6 col-lg-4 col-xl-2 wow fadeInUp">
                     <div class="wsus__footer_link">
                         <h2>Business</h2>
                         <ul>
@@ -972,7 +972,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-xl-3 wow fadeInUp">
+                <div class="col-xxl-3 col-sm-6 col-lg-4 col-xl-4 wow fadeInUp">
                     <div class="wsus__footer_location">
                         <h2>Office Locations</h2>
                         <ul>
