--- a/sign_up.html
+++ b/sign_up.html
@@ -29,15 +29,15 @@
     <header>
         <div class="container">
             <div class="row">
-                <div class="col-sm-5 col-xl-5">
-                    <div class="wsus__header_left">
+                <div class="col-md-6 col-xl-5">
+                    <div class="wsus__header_left d-none d-md-block">
                         <a href="mailto:example@gmail.com">
                             <span><img src="images/mail_icon_white.svg" alt="mail" class="img-fluid"></span>
                             example@gmail.com
                         </a>
                     </div>
                 </div>
-                <div class="col-sm-7 col-xl-7">
+                <div class="col-md-6 col-xl-7">
                     <ul class="wsus__header_right d-flex flex-wrap">
                         <li>
                             <select class="select_js">
@@ -333,7 +333,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-xl-2 col-sm-4 col-lg-3 wow fadeInUp">
+                <div class="col-xl-2 col-sm-6 col-md-4 col-lg-3 wow fadeInUp">
                     <div class="wsus__footer_link">
                         <h2>Navigation</h2>
                         <ul>
@@ -345,7 +345,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-xl-2 col-sm-4 col-lg-3 wow fadeInUp">
+                <div class="col-xl-2 col-sm-6 col-md-4 col-lg-3 wow fadeInUp">
                     <div class="wsus__footer_link">
                         <h2>Business</h2>
                         <ul>
@@ -357,7 +357,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-xl-2 col-sm-4 col-lg-3 wow fadeInUp">
+                <div class="col-xl-2 col-sm-6 col-md-4 col-lg-3 wow fadeInUp">
                     <div class="wsus__footer_link">
                         <h2>Solutions</h2>
                         <ul>
@@ -369,7 +369,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-xl-3 col-lg-8 wow fadeInUp">
+                <div class="col-xl-3 col-sm-6 col-md-8 wow fadeInUp">
                     <div class="wsus__footer_instagram">
                         <h2>Instagram</h2>
                         <ul class="d-flex flex-wrap">
