--- a/blogs.html
+++ b/blogs.html
@@ -243,7 +243,7 @@
     <section class="wsus__blog_page mt_95 xs_mt_75">
         <div class="container">
             <div class="row">
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-md-6">
                     <div class="wsus__single_blog">
                         <div class="wsus__single_blog_img">
                             <img src="images/blog_img_6.png" alt="Blog" class="img-fluid">
@@ -258,7 +258,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-md-6">
                     <div class="wsus__single_blog">
                         <div class="wsus__single_blog_img">
                             <img src="images/blog_img_5.png" alt="Blog" class="img-fluid">
@@ -273,7 +273,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-md-6">
                     <div class="wsus__single_blog">
                         <div class="wsus__single_blog_img">
                             <img src="images/blog_img_4.png" alt="Blog" class="img-fluid">
@@ -288,7 +288,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-md-6">
                     <div class="wsus__single_blog">
                         <div class="wsus__single_blog_img">
                             <img src="images/blog_img_1.png" alt="Blog" class="img-fluid">
@@ -303,7 +303,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-md-6">
                     <div class="wsus__single_blog">
                         <div class="wsus__single_blog_img">
                             <img src="images/blog_img_2.png" alt="Blog" class="img-fluid">
@@ -318,7 +318,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-md-6">
                     <div class="wsus__single_blog">
                         <div class="wsus__single_blog_img">
                             <img src="images/blog_img_3.png" alt="Blog" class="img-fluid">
