--- a/cart_view.html
+++ b/cart_view.html
@@ -347,7 +347,7 @@
                 <div class="col-xl-10">
                     <div class="wsus__cart_list_bottom">
                         <div class="row justify-content-between">
-                            <div class="col-md-6 col-xl-5 wow fadeInUp">
+                            <div class="col-md-6 col-xxl-5 wow fadeInUp">
                                 <div class="wsus__cart_coupon">
                                     <h4>Apply Coupon </h4>
                                     <form action="#">
@@ -356,7 +356,7 @@
                                     </form>
                                 </div>
                             </div>
-                            <div class="col-md-6 col-xl-5 wow fadeInUp">
+                            <div class="col-md-6 col-xxl-5 wow fadeInUp">
                                 <div class="wsus__cart_list_pricing">
                                     <h6>Total <span>$360.00</span></h6>
                                     <p>Tax<span>12%</span></p>
