--- a/contact_us.html
+++ b/contact_us.html
@@ -243,7 +243,7 @@
     <section class="wsus__contact_us mt_120 xs_mt_100">
         <div class="container">
             <div class="row">
-                <div class="col-xl-4">
+                <div class="col-xxl-4 col-lg-6">
                     <div class="wsus__contact_info" style="background: url(images/contact_info_bg.png);">
                         <h2>contact information</h2>
                         <ul>
@@ -277,7 +277,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-xl-8">
+                <div class="col-xxl-8 col-lg-6">
                     <div class="wsus__contact_map">
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3648.496963310731!2d90.38043987589973!3d23.871990184096507!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c40fb857cb01%3A0xb6ca60a98b4c89e2!2sUttara%20Sector%2012%20Park!5e0!3m2!1sen!2sbd!4v1722847815527!5m2!1sen!2sbd"
@@ -290,31 +290,31 @@
                         <h3>Reach Us For Instant Service</h3>
                         <form action="#">
                             <div class="row">
-                                <div class="col-xl-6">
+                                <div class="col-lg-6">
                                     <div class="wsus__contact_form_input">
                                         <label>First Name</label>
                                         <input type="text">
                                     </div>
                                 </div>
-                                <div class="col-xl-6">
+                                <div class="col-lg-6">
                                     <div class="wsus__contact_form_input">
                                         <label>Email</label>
                                         <input type="email">
                                     </div>
                                 </div>
-                                <div class="col-xl-6">
+                                <div class="col-lg-6">
                                     <div class="wsus__contact_form_input">
                                         <label>Phone</label>
                                         <input type="text">
                                     </div>
                                 </div>
-                                <div class="col-xl-6">
+                                <div class="col-lg-6">
                                     <div class="wsus__contact_form_input">
                                         <label>Subject</label>
                                         <input type="text">
                                     </div>
                                 </div>
-                                <div class="col-xl-12">
+                                <div class="col-lg-12">
                                     <div class="wsus__contact_form_input">
                                         <label>Subject</label>
                                         <textarea rows="8"
