--- a/career.html
+++ b/career.html
@@ -243,7 +243,7 @@
     <section class="wsus__career_page mt_95 xs_mt_75">
         <div class="container">
             <div class="row">
-                <div class="col-xl-6">
+                <div class="col-md-6">
                     <div class="wsus__single_career">
                         <a class="bookmark" href="#"><i class="far fa-bookmark"></i></a>
                         <h3>Software Engineer (SQL & BI Reporting)</h3>
@@ -262,7 +262,7 @@
                         <a class="common_btn" href="#">More details <i class="fas fa-chevron-right"></i></a>
                     </div>
                 </div>
-                <div class="col-xl-6">
+                <div class="col-md-6">
                     <div class="wsus__single_career">
                         <a class="bookmark" href="#"><i class="far fa-bookmark"></i></a>
                         <h3>UI/UX Designer</h3>
@@ -281,7 +281,7 @@
                         <a class="common_btn" href="#">More details <i class="fas fa-chevron-right"></i></a>
                     </div>
                 </div>
-                <div class="col-xl-6">
+                <div class="col-md-6">
                     <div class="wsus__single_career">
                         <a class="bookmark" href="#"><i class="far fa-bookmark"></i></a>
                         <h3>PHP/Web Developer</h3>
@@ -300,7 +300,7 @@
                         <a class="common_btn" href="#">More details <i class="fas fa-chevron-right"></i></a>
                     </div>
                 </div>
-                <div class="col-xl-6">
+                <div class="col-md-6">
                     <div class="wsus__single_career">
                         <a class="bookmark" href="#"><i class="far fa-bookmark"></i></a>
                         <h3>Senior PHP Developer</h3>
@@ -319,7 +319,7 @@
                         <a class="common_btn" href="#">More details <i class="fas fa-chevron-right"></i></a>
                     </div>
                 </div>
-                <div class="col-xl-6">
+                <div class="col-md-6">
                     <div class="wsus__single_career">
                         <a class="bookmark" href="#"><i class="far fa-bookmark"></i></a>
                         <h3>Software Engineer (SQL & BI Reporting)</h3>
@@ -338,7 +338,7 @@
                         <a class="common_btn" href="#">More details <i class="fas fa-chevron-right"></i></a>
                     </div>
                 </div>
-                <div class="col-xl-6">
+                <div class="col-md-6">
                     <div class="wsus__single_career">
                         <a class="bookmark" href="#"><i class="far fa-bookmark"></i></a>
                         <h3>UI/UX Designer</h3>
@@ -382,7 +382,6 @@
     <!--============================
         CAREER PAGE END
     =============================-->
-
 
 
     <!--===========================
