--- a/career_apply.html
+++ b/career_apply.html
@@ -245,23 +245,23 @@
             <form action="#">
                 <h4>Apply in this job</h4>
                 <div class="row">
-                    <div class="col-xl-6">
+                    <div class="col-lg-6">
                         <label>First Name</label>
                         <input type="text" placeholder="First Name">
                     </div>
-                    <div class="col-xl-6">
+                    <div class="col-lg-6">
                         <label>Last Name</label>
                         <input type="text" placeholder="Last Name">
                     </div>
-                    <div class="col-xl-6">
+                    <div class="col-lg-6">
                         <label>Last Name</label>
                         <input type="email" placeholder="Email">
                     </div>
-                    <div class="col-xl-6">
+                    <div class="col-lg-6">
                         <label>Last Name</label>
                         <input type="text" placeholder="Phone">
                     </div>
-                    <div class="col-xl-6">
+                    <div class="col-lg-6">
                         <label>Country</label>
                         <select class="select_2" name="state">
                             <option value="">select Country</option>
@@ -284,7 +284,7 @@
                             <option value="">USA</option>
                         </select>
                     </div>
-                    <div class="col-xl-6">
+                    <div class="col-lg-6">
                         <label>City</label>
                         <select class="select_2" name="state">
                             <option value="">select City</option>
@@ -307,23 +307,23 @@
                             <option value="">USA</option>
                         </select>
                     </div>
-                    <div class="col-xl-6">
+                    <div class="col-lg-6">
                         <label>Address</label>
                         <input type="text" placeholder="Address">
                     </div>
-                    <div class="col-xl-6">
+                    <div class="col-lg-6">
                         <label>Zip Code</label>
                         <input type="text" placeholder="Zip Code">
                     </div>
-                    <div class="col-xl-6">
+                    <div class="col-lg-6">
                         <label>Experience</label>
                         <input type="text" placeholder="Experience">
                     </div>
-                    <div class="col-xl-6">
+                    <div class="col-lg-6">
                         <label>Expected Salary</label>
                         <input type="text" placeholder="Expected Salary">
                     </div>
-                    <div class="col-xl-12">
+                    <div class="col-lg-12">
                         <label>Cover Letter</label>
                         <textarea rows="7"
                             placeholder="Notes about your Passion, e.g. special notes for Job."></textarea>
